2008-??-??: 1.19
	fixed flash9 Array.toString
	fixed inline return bug
	added haxe.rtti.Generic behavior
	added haxe.FastList
	bugfix to prevent recursive anonymous
	fixed some incorrectly reported "recursive inline" errors
	TODO haxe/f9 : inline code can give bad file in debug infos
	TODO haxe/f9 var x = if( true ) Math.POSITIVE_INFINITY : 0.; VerifyError

2008-02-23: 1.18
	some optimization and bugfix for as3 codegen
	bugfix : allow bitmaps and fonts classes for F9 library
	bugfix : neko.Web.setCookie
	bugfix : as3 switches in -swf-lib, and enable to "repair" corrupted as3 bytecode
	fixed --i return value in flash9
	fixed some transforms in flash9
	added js.Selection
	simplified js.Dom (more events)
	added haxe.xml.Fast.innerHTML
	added Reflect.compare
	fixed "".split() in Neko (now returns [""] instead of [])
	bugfix for swf-lib f9 classes ordering
	added EReg.customReplace
	added neko.Lib.lazyLoad and improved neko.net.Poll for Neko 1.6.1
	prevented static fields in interfaces
	added neko.Sys.cpuTime()
	fix for protected as3 classes
	added support for flash9 XML (in flash.xml package)
	added neko.vm.Tls for Neko 1.6.1
	added --no-inline
	renamed neko.zip.File to neko.zip.Reader
	added neko.zip.Writer and neko.zip.CRC32
	fixed multilevel Transform.block_vars
	added js.SWFObject
	fixes for if/switch with null or Null<T> on Flash9

2008-01-13: 1.17
	fixed Int32.compare, added Int32.read and Int32.write
	fixed type of unitialized registers in flash9
	fixed Sqlite transactions (commit and rollback now restart a transaction)
	several flash9 optimizations
	flash9 debug support (with -D fdb)
	set align to TopLeft if not defined for flash9
	added neko.vm.Gc
	fixed Null should not be a value
	bugfix in serialization format with USE_ENUM_INDEXES
	added apis in DateTools for time manipulation
	bugfix in flash9 : strictly typed local vars used in local functions
	always force swf version and sandbox redefinition
	added as3hl layer
	merge as3 classes